tests/ui/invalid_property_args.stderr
error: getter function can only have one argument (of type pyo3::Python)
 --> tests/ui/invalid_property_args.rs:9:56
  |
9 |     fn getter_with_arg(&self, _py: Python<'_>, _index: u32) {}
  |                                                        ^^^

error: setter function expected to have one argument
  --> tests/ui/invalid_property_args.rs:19:8
   |
19 |     fn setter_with_no_arg(&mut self, _py: Python<'_>) {}
   |        ^^^^^^^^^^^^^^^^^^

error: setter function can have at most two arguments ([pyo3::Python,] and value)
  --> tests/ui/invalid_property_args.rs:26:79
   |
26 |     fn setter_with_too_many_args(&mut self, _py: Python<'_>, _foo: u32, _bar: u32) {}
   |                                                                               ^^^

error: `get` and `set` with tuple struct fields require `name`
  --> tests/ui/invalid_property_args.rs:31:50
   |
31 | struct TupleGetterSetterNoName(#[pyo3(get, set)] i32);
   |                                                  ^^^

error: `get` may only be specified once
  --> tests/ui/invalid_property_args.rs:35:32
   |
35 | struct MultipleGet(#[pyo3(get, get)] i32);
   |                                ^^^

error: `set` may only be specified once
  --> tests/ui/invalid_property_args.rs:39:32
   |
39 | struct MultipleSet(#[pyo3(set, set)] i32);
   |                                ^^^

error: `name` may only be specified once
  --> tests/ui/invalid_property_args.rs:43:42
   |
43 | struct MultipleName(#[pyo3(name = "foo", name = "bar")] i32);
   |                                          ^^^^

error: `name` is useless without `get` or `set`
  --> tests/ui/invalid_property_args.rs:47:33
   |
47 | struct NameWithoutGetSet(#[pyo3(name = "value")] i32);
   |                                 ^^^^^^^^^^^^^^

error[E0277]: `PhantomData<i32>` cannot be converted to a Python object
    --> tests/ui/invalid_property_args.rs:53:12
     |
  53 |     value: ::std::marker::PhantomData<i32>,
     |            ^ required by `#[pyo3(get)]` to create a readable property from a field of type `PhantomData<i32>`
     |
     = help: the trait `IntoPyObject<'_>` is not implemented for `PhantomData<i32>`
     = note: implement `IntoPyObject` for `&PhantomData<i32>` or `IntoPyObject + Clone` for `PhantomData<i32>` to define the conversion
     = help: the following other types implement trait `IntoPyObject<'py>`:
               &&'a T
               &&OsStr
               &&Path
               &&str
               &'a (T0, T1)
               &'a (T0, T1, T2)
               &'a (T0, T1, T2, T3)
               &'a (T0, T1, T2, T3, T4)
             and 151 others
     = note: required for `PhantomData<i32>` to implement `for<'py> pyo3::impl_::pyclass::PyO3GetField<'py>`
note: required by a bound in `pyo3::impl_::pyclass::PyClassGetterGenerator::<ClassT, FieldT, OFFSET, false, false, IMPLEMENTS_INTOPYOBJECT>::generate`
    --> src/impl_/pyclass.rs:1291:26
     |
1287 |     pub const fn generate(&self, name: &'static CStr, doc: Option<&'static CStr>) -> PyMethodDefType
     |                  -------- required by a bound in this associated function
...
1291 |         for<'py> FieldT: PyO3GetField<'py>,
     |                          ^^^^^^^^^^^^^^^^^ required by this bound in `PyClassGetterGenerator::<ClassT, FieldT, OFFSET, false, false, IMPLEMENTS_INTOPYOBJECT>::generate`

error: aborting due to 9 previous errors

For more information about this error, try `rustc --explain E0277`.
